--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
     border:1px solid lightblue;
 }
 h3{
+    width:50%;
     margin-left:5px;
     font-size: 150%;
     font-family: 'Comfortaa', cursive,serif;
@@ -21,8 +22,6 @@ h3{
 .desc{
   padding: 10px; 
 }
-
-
 span{
     font-weight: bold;
 }
