--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 /* add your CSS here */
 .main{
-    width:100%;
+    width:330px;
     border:1px solid lightblue ;
     box-shadow: 5px 5px lightgray;
 }
 
-.container{
+.inner-container{
     margin: 5px;
     border:1px solid lightblue;
 }
@@ -32,6 +32,7 @@ li{
 img{
     width:300px;
     height: auto;
-    margin-left: 5px ;
+    display: block;
+    margin:auto;
     border-radius: 8px ;
 }
